deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploymentproj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-pod
          image: ghcr.io/borbely-dominik-peter/ghaction-k8s-13a-proj-fr:1776927908
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-deploymentproj-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploymentproj-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/ssl-redirect: 'true'     
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - nginx-deploymentproj-borbelydominikpeter.jcloud.jedlik.cloud
  #   - secretName: deploymentproj-certificate
  rules:
    - host: nginx-deploymentproj-borbelydominikpeter.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deploymentproj-cluster-ip-service
                port:
                  number: 80
    - host: laravel-deploymentproj-borbelydominikpeter.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-deploymentproj-cluster-ip-service
                port:
                  number: 80 

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deploymentproj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel-pod
          image: ghcr.io/borbely-dominik-peter/ghaction-k8s-13a-proj-ba:1776927908
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: laravel-deploymentproj-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: laravel
  ports:
    - protocol: TCP
      name: a
      targetPort: 8000
      port: 80

---
